// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Experimental/Button Icon Buttons 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Icon-Left
      </b>
    </div>
    
    
    <div>
      <b>
        Icon-Right
      </b>
    </div>
    
    
    <div>
      <b>
        Icon-Only
      </b>
    </div>
       

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :normal
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--icon-left"
    >
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized fn-button--icon-right"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="More"
      class="fn-button fn-button--transparent fn-button--icon-only"
    >
      
        
      <span
        class="sap-icon sap-icon--overflow"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :hover
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--icon-left is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized fn-button--icon-right is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="More"
      class="fn-button fn-button--transparent fn-button--icon-only is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--overflow"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :active
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--icon-left is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized fn-button--icon-right is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="More"
      class="fn-button fn-button--transparent fn-button--icon-only is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--overflow"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :focus
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--icon-left is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized fn-button--icon-right is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="More"
      class="fn-button fn-button--transparent fn-button--icon-only is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--overflow"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :disabled
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--icon-left"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized fn-button--icon-right"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="More"
      class="fn-button fn-button--transparent fn-button--icon-only"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--overflow"
      />
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Primary Buttons 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Emphasized 
      </b>
    </div>
    
    
    <div>
      <b>
        Default
      </b>
    </div>
       

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :normal
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--emphasized"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :hover
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--emphasized is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :active
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--emphasized is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :focus
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--emphasized is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :disabled
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--emphasized"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Secondary Buttons 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Ghost
      </b>
    </div>
    
    
    <div>
      <b>
        Transparent
      </b>
    </div>
     
    
    <div>
      <b>
        Neutral
      </b>
    </div>
      

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :normal
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--ghost"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :hover
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--ghost is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :active
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--ghost is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :focus
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--ghost is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :disabled
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--ghost"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Segmented Button 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div
      aria-label="Group label"
      class="fn-segmented-button"
      role="group"
    >
      
        
      <button
        class="fn-button fn-button--selected"
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent"
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent"
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent"
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent"
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div
      aria-label="Group label"
      class="fn-segmented-button"
      role="group"
    >
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-right"
      >
        
            
        <span
          class="fn-button__text"
        >
          Send
        </span>
        
            
        <span
          class="sap-icon sap-icon--paper-plane"
        />
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--selected fn-button--icon-right"
      >
        
            
        <span
          class="fn-button__text"
        >
          Send
        </span>
        
            
        <span
          class="sap-icon sap-icon--paper-plane"
        />
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-right"
      >
        
            
        <span
          class="fn-button__text"
        >
          Send
        </span>
        
            
        <span
          class="sap-icon sap-icon--paper-plane"
        />
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-right"
      >
        
            
        <span
          class="fn-button__text"
        >
          Send
        </span>
        
            
        <span
          class="sap-icon sap-icon--paper-plane"
        />
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-right"
      >
        
            
        <span
          class="fn-button__text"
        >
          Send
        </span>
        
            
        <span
          class="sap-icon sap-icon--paper-plane"
        />
        
        
      </button>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div
      aria-label="Group label"
      class="fn-segmented-button"
      role="group"
    >
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-left"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
            
        <span
          class="fn-button__text"
        >
          Share
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-left"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
            
        <span
          class="fn-button__text"
        >
          Share
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--selected fn-button--icon-left"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
            
        <span
          class="fn-button__text"
        >
          Share
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-left"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
            
        <span
          class="fn-button__text"
        >
          Share
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-left"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
            
        <span
          class="fn-button__text"
        >
          Share
        </span>
        
        
      </button>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div
      aria-label="Group label"
      class="fn-segmented-button"
      role="group"
    >
      
        
      <button
        aria-label="Share"
        class="fn-button fn-button--transparent fn-button--icon-only"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
        
      </button>
      
        
      <button
        aria-label="Share"
        class="fn-button fn-button--transparent fn-button--icon-only"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
        
      </button>
      
        
      <button
        aria-label="Share"
        class="fn-button fn-button--transparent fn-button--icon-only"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
        
      </button>
      
        
      <button
        aria-label="Share"
        class="fn-button fn-button--selected fn-button--icon-only"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
        
      </button>
      
        
      <button
        aria-label="Share"
        class="fn-button fn-button--transparent fn-button--icon-only"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
        
      </button>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div
      aria-label="Group label"
      class="fn-segmented-button"
      role="group"
    >
      
        
      <button
        class="fn-button fn-button--transparent"
        disabled=""
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent"
        disabled=""
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent"
        disabled=""
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent"
        disabled=""
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--selected"
        disabled=""
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Semantic Buttons 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Accept
      </b>
    </div>
    
    
    <div>
      <b>
        Success
      </b>
    </div>
    
    
    <div>
      <b>
        Attention
      </b>
    </div>
    
    
    <div>
      <b>
        Critical
      </b>
    </div>
    
    
    <div>
      <b>
        Reject
      </b>
    </div>
    
    
    <div>
      <b>
        Negative
      </b>
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :normal
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--accept"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :hover
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--accept is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :active
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--accept is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :focus
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--accept is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :disabled
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--accept"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Toggle Buttons 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Selected 
      </b>
    </div>
    
    
    <div>
      <b>
        Default
      </b>
    </div>
       

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :normal
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--selected"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :hover
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--selected is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :active
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--selected is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :focus
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--selected is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :disabled
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--selected"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;
